Closed
Bug 321344
Opened 20 years ago
Closed 20 years ago
[trunk] Google maps/gmail compose is broken
Categories
(Core :: DOM: HTML Parser, defect, P2)
Core
DOM: HTML Parser
Tracking
()
VERIFIED
FIXED
mozilla1.9alpha1
People
(Reporter: polidobj, Assigned: mrbkap)
References
()
Details
(Keywords: regression, Whiteboard: [patch])
Attachments
(1 file)
|
1.27 KB,
patch
|
peterv
:
review+
peterv
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20051223 Firefox/1.6a1
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20051223 Firefox/1.6a1
Google maps no longer works in the 12-23 nightly. The error given in the console is:
Error: a has no properties
Source File: http://maps.google.com/mapfiles/maps.30a.js
Line: 647
Reproducible: Always
Actual Results:
No map is shown.
I went back and confirmed that this works in 1.5 and it works in the 12-22 nightly. So this does not seem like something that changed on google's end.
Comment 1•20 years ago
|
||
regressed between:
works in 20051222 1154 pdt build
fails in 20051222 1500 pdt build
chickens:
http://bonsai.mozilla.org/cvsquery.cgi?treeid=default&module=PhoenixTinderbox&branch=HEAD&branchtype=match&filetype=match&whotype=match&sortby=Date&hours=2&date=explicit&mindate=20051222+115200&maxdate=20051222+150000&cvsroot=%2Fcvsroot
probably Bug 316582
Status: UNCONFIRMED → NEW
Ever confirmed: true
Updated•20 years ago
|
Severity: normal → major
Keywords: regression
Summary: [trunk]Google maps is broken. → [trunk] Google maps is broken.
Version: unspecified → Trunk
| Assignee | ||
Updated•20 years ago
|
| Assignee | ||
Comment 2•20 years ago
|
||
*** Bug 321345 has been marked as a duplicate of this bug. ***
| Assignee | ||
Updated•20 years ago
|
Assignee: nobody → mrbkap
Component: General → HTML: Parser
Priority: -- → P2
Product: Firefox → Core
QA Contact: general → parser
Target Milestone: --- → mozilla1.9alpha
Updated•20 years ago
|
Summary: [trunk] Google maps is broken. → [trunk] Google maps/gmail compose is broken
| Assignee | ||
Comment 3•20 years ago
|
||
The original code looked like:
PRBool firstTime = PR_TRUE;
PRBool theIterationIsOk = firstTime || ...;
I was trying to be too clever, this fixes things.
Attachment #206716 -
Flags: superreview?(peterv)
Attachment #206716 -
Flags: review?(peterv)
| Assignee | ||
Updated•20 years ago
|
Status: NEW → ASSIGNED
Whiteboard: [patch]
| Assignee | ||
Updated•20 years ago
|
OS: Windows XP → All
Hardware: PC → All
Comment 4•20 years ago
|
||
I'd say to restore the trunk's honor, this should land ASAP, even before review, if the patch fixes the bug and doesn't introduce any others that can be found by the usual smoketesting (which must include maps and gmail compose, henceforth!).
/be
| Assignee | ||
Comment 5•20 years ago
|
||
I checked this into the trunk.
Status: ASSIGNED → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Comment 6•20 years ago
|
||
Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.9a1) Gecko/20051224 Firefox/1.6a1 ID:2005122401
Verified on Win32
Comment 7•20 years ago
|
||
*** Bug 321372 has been marked as a duplicate of this bug. ***
Comment 8•20 years ago
|
||
Comment on attachment 206716 [details] [diff] [review]
Oops
Oh :-(.
Attachment #206716 -
Flags: superreview?(peterv)
Attachment #206716 -
Flags: superreview+
Attachment #206716 -
Flags: review?(peterv)
Attachment #206716 -
Flags: review+
Comment 9•20 years ago
|
||
Verified FIXED with both
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20051225 Firefox/1.6a1
and SeaMonkey 1.5a;Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20051224 Mozilla/1.0
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•