bug 321344: Make sure we always enter the loop. There's no reason to actually test anything here because we never really did before. Review from peterv is still pending, but brendan wants this on the trunk because it breaks XMLHttpRequest.